<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">嘿!伙计</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <!-- 弹出框 -->
    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="LOADING">Loading...</string>
    <string name="app_login_log">嘿！伙计餐饮云平台</string>
    <string name="login_user_hint">用户名</string>
    <string name="login_pass_hint">密码</string>
    <string name="login_btn">登录</string>
    <string name="text_tv_title">嘿!伙计,欢迎您!</string>
    <string name="tab_tableinfo">桌台</string>
    <string name="tab_service">服务</string>
    <string name="tab_saoma">扫码点餐</string>
    <string name="tab_order">订单</string>
    <string name="tab_mine">我的</string>
    <string name="update_oldpass_hint">请输入旧密码</string>
    <string name="update_newpass_hint">请输入新密码</string>
    <string name="update_subnewpass_hint">确认新密码</string>
    <string name="submit">修改</string>
    <string name="setting_su">设置成功</string>

    <!-- 刷新 -->
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">正在加载中\u2026</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="none_paired">没有已匹配的设备</string>
    <string name="scanning">搜索</string>
    <string name="select_device">选择一个设备连接</string>
    <string name="none_found">未发现设备</string>
    <string name="btnSearch">连接蓝牙打印机</string>
    <string name="btnSend">打印</string>
    <string name="btn_test">打印测试页</string>
    <string name="btnClose">关闭</string>
    <string name="txt_content">&quot;&quot;</string>
    <string name="menu_settings">设置</string>
    <string name="strLang">ch</string>
    <string name="button_scan">搜索</string>

</resources>